# fractal_bitmap_creator

./: .gitignore  CMakeLists.txt  README.md
include/: Bitmap.h  BitmapFileHeader.h  BitmapInfoHeader.h  FractalBitmap.h  Mandelbrot.h  Zoom.h
src/: Bitmap.cpp  CMakeLists.txt  FractalBitmap.cpp  Mandelbrot.cpp  Zoom.cpp  main.cpp
